# agent-research

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  langgraph.json  pyproject.toml  skills-lock.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
sql_assistant/: agent.py  middleware.py  prompts.py  skills.py  station_mapping.yaml  tools.py
sql_assistant/skills/: anomaly_alert.md  business_overview.md  performance_benchmarking.md  target_achievement.md  trend_analysis.md
