[project]
name = "sql-assistant"
version = "0.1.0"
description = "SQL 查询助手 - 基于渐进式披露的技能系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.3",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.2.3",
]
